Mejora de Servicios

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,7 +5,7 @@
     "RegionEndpoint": "us-east-1",
     "LogGroupName": "/dev/masivian/roulette"
   },
-  "TimeZone": "America/Bogota",
+  "TimeZone": "SA Pacific Standard Time",
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
